# facematch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
faceclustering/: CMakeLists.txt  Face.h  clustering.cpp  faceclustering.cpp  main.cpp
facematch/: CMakeLists.txt  Face.cpp  Face.h  FaceDetection.cpp  FaceDetection.h  clustering.h  facematch.cpp  facematch.h  main.cpp
facerecognition/: CMakeLists.txt  dataset.cpp  dataset.h  main.cpp  parse_config.h
utils/: build_csv.py  down_flickr_album.py  download_training_images.py
